DNA-360 Bugfix - [Win10 Edge Browser] The placeholder text for search is center aligned (#105)

--- a/src/textfield/index.css
+++ b/src/textfield/index.css
@@ -15,7 +15,10 @@
   font-family: inherit;
   font-size: var(--spectrum-font-size);
   line-height: var(--spectrum-text-body-line-height);
-  text-indent: var(--spectrum-padding);
+
+  /* Use padding instead of text-indent because text-indent does not left align the text in Edge browser  */
+  padding-left: var(--spectrum-padding);
+  text-indent: 0;
 
   transition: border-color var(--spectrum-transition-time) ease-in-out, box-shadow var(--spectrum-transition-time) ease-in-out;
 
